<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnSecondary"
    tools:context=".schedule.ui.list.ScheduleFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Add CardView for the date design -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            android:layout_marginTop="30dp"
            app:cardElevation="5dp"
            android:background="@drawable/gradient_background">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Date and Today label -->
                <TextView
                    android:id="@+id/tv_current_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_16_september"
                    android:textSize="18sp"
                    android:fontFamily="@font/medium"
                    android:textColor="@color/title_purple11" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/today"
                    android:textSize="24sp"
                    android:fontFamily="@font/bold"
                    android:textColor="@color/title_purple11"/>

                <!-- Week dates and Add Task button -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <!-- RecyclerView for week dates -->
                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/recycler_view_dates" />

                    <!-- Add Task button -->
                    <Button
                        android:id="@+id/btn_add_course"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_schedule"
                        android:backgroundTint="?attr/colorPrimary"
                        android:textColor="@android:color/white"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- LinearLayout for days of the week -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="6dp">

            <LinearLayout
                android:id="@+id/ll_monday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_monday_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mon"
                    android:textSize="16sp"
                    android:fontFamily="@font/regular"
                    android:textColor="@color/textColor"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/tv_monday_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_14"
                    android:fontFamily="@font/regular"
                    android:textColor="@color/textColor"
                    android:textSize="16sp"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_tuesday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_tuesday_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tue"
                    android:textSize="16sp"
                    android:fontFamily="@font/regular"
                    android:textColor="@color/textColor"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/tv_tuesday_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_15"
                    android:textSize="16sp"
                    android:fontFamily="@font/regular"
                    android:textColor="@color/textColor"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_wednesday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_wednesday_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wed"
                    android:textSize="16sp"
                    android:fontFamily="@font/regular"
                    android:textColor="@color/textColor"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/tv_wednesday_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_16"
                    android:textSize="16sp"
                    android:fontFamily="@font/regular"
                    android:textColor="@color/textColor"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_thursday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_thursday_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thu"
                    android:textSize="16sp"
                    android:fontFamily="@font/regular"
                    android:textColor="@color/textColor"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/tv_thursday_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_17"
                    android:textSize="16sp"
                    android:fontFamily="@font/regular"
                    android:textColor="@color/textColor"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_friday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_friday_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fri"
                    android:textSize="16sp"
                    android:fontFamily="@font/regular"
                    android:textColor="@color/textColor"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/tv_friday_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_18"
                    android:textSize="16sp"
                    android:fontFamily="@font/regular"
                    android:textColor="@color/textColor"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_saturday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_saturday_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sat"
                    android:textSize="16sp"
                    android:fontFamily="@font/regular"
                    android:textColor="@color/textColor"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/tv_saturday_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_19"
                    android:textSize="16sp"
                    android:fontFamily="@font/regular"
                    android:textColor="@color/textColor"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_sunday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_sunday_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sun"
                    android:textSize="16sp"
                    android:fontFamily="@font/regular"
                    android:textColor="@color/textColor"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/tv_sunday_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_20"
                    android:textSize="16sp"
                    android:fontFamily="@font/regular"
                    android:textColor="@color/textColor"
                    android:gravity="center"/>
            </LinearLayout>
        </LinearLayout>


        <include layout="@layout/content_list" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
