<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/cloud"
    tools:context=".signin.SignInActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/lavender_border">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:fontFamily="@font/bold"
                android:textColor="@color/title_purple11" />

            <com.powerpuff.daylog.customview.CustomTextInput
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/login_username"
                android:background="@drawable/lavender_border"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:hint="@string/username"
                android:fontFamily="@font/regular"
                android:textColor="@color/textColor"
                android:drawableLeft="@drawable/ic_baseline_person_pin_24"
                android:drawablePadding="8dp" />

            <com.powerpuff.daylog.customview.CustomPassword
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/login_password"
                android:background="@drawable/lavender_border"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:fontFamily="@font/regular"
                android:textColor="@color/textColor"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:drawablePadding="8dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/login"
                android:id="@+id/login_button"
                android:textSize="18sp"
                android:fontFamily="@font/medium"
                android:textColor="@color/white"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/purple11"
                app:cornerRadius = "20dp"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_yet_registered"
                android:layout_gravity="center"
                android:padding="8dp"
                android:fontFamily="@font/regular"
                android:textColor="@color/textColor"
                android:layout_marginTop="10dp"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/signupRedirectText"
                android:text="@string/sign_up"
                android:layout_gravity="center"
                android:padding="8dp"
                android:fontFamily="@font/regular"
                android:textColor="@color/purple11"

                android:layout_marginTop="10dp"
                android:textSize="17sp"/>
        </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>